--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Tetris Game</title>
 </head>
 <body>
-  <canvas id="tetris"></canvas>
+  <canvas id="gameBoard"></canvas>
   <div>Score: <span id="score">0</span></div>
+
+  <script src="js/constants.js"></script>
   <script src="js/tetrominoes.js"></script>
+  <script src="js/piece.js"></script>
+  <script src="js/board.js"></script>
   <script src="js/tetris.js"></script>
 </body>
 </html>
